RESOLVED FIXED88359
[chromium] More than 8 fingers get ignored by touch
https://bugs.webkit.org/show_bug.cgi?id=88359
Summary [chromium] More than 8 fingers get ignored by touch
Eugene Girard
Reported 2012-06-05 13:27:35 PDT
WebTouchEvent::touchesLengthCap is set to 8. On devices that support more than 8 touches, additional touches get ignored. Bump this up to 12.
Attachments
Patch (1.24 KB, patch)
2012-06-05 13:47 PDT, Robert Kroeger
no flags
Patch (1.36 KB, patch)
2012-06-08 10:39 PDT, Robert Kroeger
no flags
Robert Kroeger
Comment 1 2012-06-05 13:47:10 PDT
Robert Kroeger
Comment 2 2012-06-05 13:47:44 PDT
I think this is sufficient. What do you think?
WebKit Review Bot
Comment 3 2012-06-05 13:50:41 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Eugene Girard
Comment 4 2012-06-05 13:59:39 PDT
LGTM
James Robinson
Comment 5 2012-06-05 14:29:30 PDT
Both of these numbers seem really arbitrary. Is the use case here two-handed polydactylic users?
Robert Kroeger
Comment 6 2012-06-05 14:49:07 PDT
fwiw: my justification for 12: it's 1 more than the best commonly available touchscreen hardware and as you observe: more than the normal human finger count.
Eugene Girard
Comment 7 2012-06-05 15:41:56 PDT
Arbitrary, yes. The justification is that we have ten fingers, so eight is clearly too low. The Gesture Recognizer (part of Chromium) assumes 12 points. The iPad supports 11, 3M reportedly makes a 30 touch screen, and my home brew device supports, well, an unlimited number of points. 12 seemed to be a good value since it's in line with the GR.
James Robinson
Comment 8 2012-06-05 15:56:50 PDT
Comment on attachment 145862 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=145862&action=review > Source/WebKit/chromium/public/WebInputEvent.h:388 > + enum { touchesLengthCap = 12 }; Please document where this number is coming from (i.e. this is matching chromium's gesture recognition library).
Robert Kroeger
Comment 9 2012-06-08 10:39:29 PDT
WebKit Review Bot
Comment 10 2012-06-08 11:15:11 PDT
Comment on attachment 146599 [details] Patch Clearing flags on attachment: 146599 Committed r119843: <http://trac.webkit.org/changeset/119843>
WebKit Review Bot
Comment 11 2012-06-08 11:15:16 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 12 2012-06-20 06:12:10 PDT
Comment on attachment 146599 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=146599&action=review > Source/WebKit/chromium/public/WebInputEvent.h:389 > + // Maximum number of simultaneous touches supported on > + // Ash/Aura. Odd wrapping. Odd names.
Note You need to log in before you can comment on or make changes to this bug.