More than 8 fingers get ignored by touch https://bugs.webkit.org/show_bug.cgi?id=88359

Reviewed by James Robinson.

* public/WebInputEvent.h: Increase of TouchPoints per TouchEvent from 8 to 12.


Canonical link: https://commits.webkit.org/106479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119843 268f45cc-cd09-0410-ab3c-d52691b4dbfc